[package]
name = "rw_perlin"
version = "0.1.0"
authors = ["lesguillemets <kgkacko+github@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3.45"
features = [
    'Window',
    'console',
    'ImageData',
    'CanvasRenderingContext2d',
]
